--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
   "private": true,
   "homepage": "https://github.com/epandco/resource-decorator#readme",
   "devDependencies": {
-    "@types/eslint": "^6.1.1",
-    "@typescript-eslint/eslint-plugin": "^2.3.2",
-    "@typescript-eslint/parser": "^2.3.2",
     "@types/dotenv": "~6.1.1",
-    "typescript": "^3.6.3",
-    "eslint": "^6.5.1",
+    "@types/eslint": "^6.1.3",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
+    "eslint": "^6.8.0",
     "leasot": "^8.2.0",
-    "reflect-metadata": "~0.1.13"
+    "reflect-metadata": "~0.1.13",
+    "typescript": "^3.7.4"
   },
   "peerDependencies": {
     "reflect-metadata": "~0.1.13"
